prevent center title from shifting upon scroll bar

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+html {
+  overflow-y: overlay;
+}
+
 body {
   background-color: whitesmoke;
 }
