--- a/src/components/UserIndex.css
+++ b/src/components/UserIndex.css
@@ -1,4 +1,9 @@
 .navbar {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-container {
   height: 64px;
   background-color: white;
   display: flex;
